--- a/css/base/container.css
+++ b/css/base/container.css
@@ -3,7 +3,7 @@
     padding-right: 0x;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 767px) {
     .container {
         width: 288px;
         margin-left: auto;
