--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,11 +1,8 @@
-.container {
-    padding-left: 0;
-    padding-right: 0x;
-}
-
 @media screen and (max-width: 767px) {
     .container {
-        width: 288px;
+        width: 320px;
+        padding-left: 16px;
+        padding-right: 16px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -13,7 +10,11 @@
 
 @media screen and (min-width: 768px) {
     .container {
-        width: 736px;
+        width: 768px;
+        padding-left: 16px;
+        padding-right: 16px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
