--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -33,7 +33,6 @@
 }
 
 .nav-logo .accent {
-    margin-right: 76px;
     color: #2e2f42;
 }
 
@@ -46,6 +45,7 @@
 }
 
 .mobile-menu {
+    padding-bottom: 40px;
     position: fixed;
     top: 0;
     left: 0;
@@ -53,6 +53,8 @@
     width: 100%;
     height: 100%;
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -93,8 +95,6 @@
 
 .mobile-menu-nav {
     margin-top: 72px;
-    margin-left: 16px;
-    margin-bottom: 168px;
 }
 
 .mobile-menu-nav-list {
@@ -114,12 +114,19 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.nav-curent {
+    color: #404BBF;
+}
+
 .mobile-menu-nav-link:focus {
     color: var(--OCEAN, #404BBF);
 }
 
+.mobile-menu-contact {
+    margin-top: auto;
+}
+
 .mobile-menu-address {
-    margin-left: 16px;
     margin-bottom: 48px;
 }
 
@@ -133,6 +140,10 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.adress-curent {
+    color: #4D5AE5;
+}
+
 .mobile-menu-address-link:focus {
     color: var(--IRIS, #4D5AE5);
 }
@@ -142,11 +153,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
-}
-
-.mobile-menu-social {
-    margin-left: 16px;
-    margin-bottom: 40px;
 }
 
 .mobile-menu-social-list {
@@ -192,7 +198,7 @@
         align-items: center;
     }
 
-    .nav-logo .accent {
+    .nav-logo {
         margin-right: 120px;
     }
 
@@ -233,9 +239,9 @@
     }
 
     .address {
-    display: flex;
-    align-items: center;
-    font-style: normal;
+        display: flex;
+        align-items: center;
+        font-style: normal;
     }
 
     .address-link {
@@ -277,10 +283,11 @@
 /* ======= DESKTOP ======= */
 
 @media screen and (min-width: 1158px) {
+    
     .nav-logo {
         margin-right: 76px;
     }
-    
+
     .address-list {
         display: flex;
         gap: 40px;
